--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <BR>
 
 <div class="tab">
-<button class="tablinks show active" onclick="openCity(event, 'About')" ><div class="text" style="font-family:customBold;font-size: 30px">About</div></button>
-  <button class="tablinks" onclick="openCity(event, 'Landscape')" id="defaultOpen"><div class="text" style="font-family: customBold;font-size: 30px">Landscape</div></button>
+<button class="tablinks show active" onclick="openCity(event, 'About')" id="defaultOpen"><div class="text" style="font-family:customBold;font-size: 30px">About</div></button>
+  <button class="tablinks" onclick="openCity(event, 'Landscape')" ><div class="text" style="font-family: customBold;font-size: 30px">Landscape</div></button>
   <button class="tablinks" onclick="openCity(event, 'Animal')"><div class="text" style="font-family: customBold;font-size:30px">Animal</div></button>
   <button class="tablinks" onclick="openCity(event, 'Plant')"><div class="text" style="font-family: customBold;font-size:30px">Plant</div></button>
   <button class="tablinks" onclick="openCity(event, 'Composite')"><div class="text" style="font-family: customBold;font-size: 30px">Composite</div></button>
