--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 
 
-<div style="line-height: 112px;top: 50%" ><img src="pk1.png" width="80" style="float: left;"><p class="name" style="font-size: 40px;font-family: customBold;">&nbsp;&nbsp;&nbsp;Prajwal Kotian</p></div>
+<div style="line-height: 112px;top: 50%" ><img src="Sign.png" width="200" style="float: left;"><p class="name" style="font-size: 40px;font-family: customBold;">&nbsp;&nbsp;&nbsp;</p></div>
 
 <BR>
 
 <div class="tab">
-<button class="tablinks show active" onclick="openCity(event, 'About')" id="defaultOpen"><div class="text" style="font-family:customBold;font-size: 30px">About</div></button>
-  <button class="tablinks" onclick="openCity(event, 'Landscape')" ><div class="text" style="font-family: customBold;font-size: 30px">Landscape</div></button>
+<button class="tablinks show active" onclick="openCity(event, 'About')" ><div class="text" style="font-family:customBold;font-size: 30px">About</div></button>
+  <button class="tablinks" onclick="openCity(event, 'Landscape')" id="defaultOpen"><div class="text" style="font-family: customBold;font-size: 30px">Landscape</div></button>
   <button class="tablinks" onclick="openCity(event, 'Animal')"><div class="text" style="font-family: customBold;font-size:30px">Animal</div></button>
   <button class="tablinks" onclick="openCity(event, 'Plant')"><div class="text" style="font-family: customBold;font-size:30px">Plant</div></button>
   <button class="tablinks" onclick="openCity(event, 'Composite')"><div class="text" style="font-family: customBold;font-size: 30px">Composite</div></button>
