--- a/index.html
+++ b/index.html
@@ -292,12 +292,13 @@ And with the help of support and synergy of family, good friends  it has made me
 
 excellence.
 <BR>
-Myself Prajwal Kotian, pursuing Bachelor in Business Administration in International Business at  B. Y. K College.
+Myself Prajwal Kotian, pursuing Msc in International Business Management at Heriot Watt University, Scotland.
 
-While my college year, I discovered my passion for photography and sketching.  <BR>
+I am a wanderer and like to explore new places; as well as i like to do sport activities. Besides I do sketching,
+photography and graphic designing during my leisure time.  <BR>
 I value keen eyes and an exploration of new avenues of creativity.
 
-I love Capturing memories and etching them in hearts.
+I love Capturing memories and etching them in hearts. <BR>
 In photography, there is a reality so subtle that it becomes more real than reality !</p>
 </div>
 
