--- a/index.html
+++ b/index.html
@@ -286,20 +286,20 @@
 
 <div id="About" class="tabcontent active">
   <img src="h.jpeg" alt="Prajwal Kotian" width="100px">
-  <p class="name" style="font-family: customBold; font-size: 30px">There is just no stopping a good idea from growing !
+  <p class="name" style="font-family: customBold; font-size: 30px">There is just no stopping a good idea from growing!
 
-And with the help of support and synergy of family, good friends  it has made me to continue forward in its march toward
+And with the help of support and synergy of family, good friends it has made me continue forward in its march toward
 
 excellence.
 <BR>
-Myself Prajwal Kotian, pursuing Msc in International Business Management at Heriot Watt University, Scotland.
+Myself Prajwal Kotian, pursuing MSc in International Business Management in Scotland.
 
-I am a wanderer and like to explore new places; as well as i like to do sport activities. Besides I do sketching,
+I am a wanderer and like to explore new places; as well as i like to do sports activities. Besides, I do sketching,
 photography and graphic designing during my leisure time.  <BR>
 I value keen eyes and an exploration of new avenues of creativity.
 
 I love Capturing memories and etching them in hearts. <BR>
-In photography, there is a reality so subtle that it becomes more real than reality !</p>
+In photography, there is a reality so subtle that it becomes more real than reality!</p>
 </div>
 
 
