--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ And with the help of support and synergy of family, good friends it has made me 
 
 excellence.
 <BR>
-Myself Prajwal Kotian, pursuing MSc in International Business Management in Scotland.
+Myself Prajwal Kotian, pursuing MSc in International Business Management [Scotland].
 
 I am a wanderer and like to explore new places; as well as i like to do sports activities. Besides, I do sketching,
 photography and graphic designing during my leisure time.  <BR>
