--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <META CHARSET = "UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="css/style.css" rel="stylesheet">
-<TITLE>Prajwal Kotian - Photographer</TITLE>
+<TITLE>Prajwal Kotian - Photographer/Artist </TITLE>
 
 <link href="styles.css" rel="stylesheet">
 <link rel="shortcut icon" href="pk4.png" type="image/jpeg" />
