--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 </div>
 
 <div id="About" class="tabcontent active">
-  <img src="u.jpeg" alt="Prajwal Kotian" width="150px">
+  <img src="SNOW_20211009_020409_951-02.jpeg" alt="Prajwal Kotian" width="150px">
   <p class="name" style="font-family: customBold; font-size: 30px">There is just no stopping a good idea from growing!
 <BR>
 And with the help of support and synergy of family, good friends it has made me continue forward in its march toward
